[package]
name = "performance-service"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["tsunyoku <tsunyoku@gmail.com>", "Aochi <aochi@fuquila.net>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
clap = { version = "3.0.0-beta.5", features = ["derive", "env"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.87"
env_logger = "0.9.0"
anyhow = "1.0.48"
log = "0.4.14"
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["trace"] }
axum = { version = "0.3.4", features = ["tower-log"] }
chrono = { version = "0.4.22", features = ["serde"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6.9"
tokio-executor-trait = "2.1.0"
tokio-stream = "0.1.11"
redis = { version = "0.22.0", features = ["tokio-comp"] }
bcrypt = "0.13.0"
uuid = { version = "1.2.1", features = ["v4"] }
futures = "0.3.17"
strsim = "0.10.0"
akatsuki-pp-rs = { package = "akatsuki-pp", git = "https://github.com/RealistikOsu/akatsuki-pp-rs", rev = "3ff7ef1f8852cc9a766bbe98d26467520bc45856", features = ["async_tokio"] }
reqwest = "0.11"
